Implement the parsing of json and generation of the first component

--- a/data/index.html
+++ b/data/index.html
@@ -35,6 +35,14 @@
                         <label for="wifi-password">Password:</label>
                         <input type="password" id="wifi-password" name="wifi-password">
                     </div>
+                    <div class="form-group">
+                        <label for="wifi-client-ip">Client IP:</label>
+                        <input type="text" id="wifi-client-ip" name="wifi-client-ip">
+                    </div>
+                    <div class="form-group">
+                        <label for="wifi-client-port">Client Port:</label>
+                        <input type="text" id="wifi-client-port" name="wifi-client-port">
+                    </div>
                 </div>
                 
                 <div class="device-actions">
