inital version for HC-SR04 support. improvemts in js are necessary

--- a/data/index.html
+++ b/data/index.html
@@ -22,6 +22,7 @@
                         <li data-component-type="LED">LED</li>
                         <li data-component-type="Button">Button</li>
                         <li data-component-type="Sensor">Sensor</li>
+                        <li data-component-type="HC_SR04">HC-SR04</li>
                     </ul>
                 </div>
                 
